# android_vendor_amlogic_reference_aml_mp_sdk

./: Android.mk  CMakeLists.txt  Makefile
cas/: AmCasLibWrapper.cpp  AmCasLibWrapper.h  AmlCasBase.cpp  AmlCasBase.h  AmlDvbCasHal.cpp  Aml_MP_CAS.cpp
cas/nagra_webcas/: AmlNagraWebCas.cpp  AmlNagraWebCas.h
cas/vmx_iptvcas/: AmlVMXIptvCas.cpp  AmlVMXIptvCas_V2.cpp  AmlVMXIptvCas_V2.h
cas/vmx_webcas/: AmlVMXWebCas.cpp  AmlVMXWebCas.h
cas/wv_iptvcas/: AmlWVIptvCas.cpp  AmlWVIptvCas.h  AmlWVIptvCas_V2.cpp  AmlWVIptvCas_V2.h
demux/: AmlDemuxBase.cpp  AmlDemuxBase.h  AmlESQueue.cpp  AmlESQueue.h  AmlHwDemux.cpp  AmlHwDemux.h  AmlSwDemux.cpp  AmlSwDemux.h  AmlTsParser.cpp  AmlTsParser.h  AmlTunerHalDemux.cpp  AmlTunerHalDemux.h
dvr/: AmlDVRPlayer.cpp  AmlDVRPlayer.h  AmlDVRRecorder.cpp  AmlDVRRecorder.h  Aml_MP_DVR.cpp
include/Aml_MP/: Aml_MP.h  Aml_MediaPlayer.h  Cas.h  Common.h  Dvr.h
mediaplayer/: AmlMediaPlayerBase.cpp  AmlMediaPlayerBase.h  Aml_MP_MediaPlayer.cpp  Aml_MP_MediaPlayerImpl.cpp  Aml_MP_MediaPlayerImpl.h  CMakeLists.txt
player/: AmlCTCPlayer.cpp  AmlCTCPlayer.h  AmlDummyTsPlayer.cpp  AmlDummyTsPlayer.h  AmlPlayerBase.cpp  AmlPlayerBase.h  AmlTsPlayer.cpp  AmlTsPlayer.h  AmlTvPlayer.cpp  AmlTvPlayer.h  Aml_MP.cpp  Aml_MP_Player.cpp  Aml_MP_PlayerImpl.cpp  Aml_MP_PlayerImpl.h
tests/amlMpMediaPlayerDemo/: AmlMpMediaPlayerDemo.cpp  Android.mk  CMakeLists.txt
tests/amlMpPlayerDemo/: AmlMpPlayerDemo.cpp  Android.mk
tests/amlMpTestSupporter/: AmlMpTestSupporter.cpp  AmlMpTestSupporter.h  Android.mk  BufferQueue.cpp  BufferQueue.h  CMakeLists.txt  DVRPlayback.cpp  DVRPlayback.h  DVRRecord.cpp  DVRRecord.h  Playback.cpp  Playback.h  TestModule.cpp  TestUtils.cpp  TestUtils.h
tests/amlMpTestSupporter/source/: DvbSource.cpp  DvbSource.h  FileSource.cpp  Source.cpp  Source.h  UdpSource.cpp  UdpSource.h  fend.h
tests/unitTest/: AmlMpDvrPlayerAudioTest.cpp  AmlMpDvrPlayerTest.cpp  AmlMpDvrPlayerVideoTest.cpp  AmlMpDvrRecorderProbeTest.cpp  AmlMpDvrRecorderTest.cpp  AmlMpMultiThreadTest.cpp  AmlMpPlayerAudioTest.cpp  AmlMpPlayerProbeTest.cpp  AmlMpPlayerSubtitleTest.cpp  AmlMpPlayerTest.cpp  AmlMpPlayerVideoTest.cpp  AmlMpPlayerVideoTest.h  AmlMpTest.cpp  AmlMpTest.h  Android.mk  CMakeLists.txt  TestUrlList.cpp  TestUrlList.h
tunerhal/: AudioTrackWrapper.cpp  AudioTrackWrapper.h  MediaCodecWrapper.cpp  MediaCodecWrapper.h  TunerCommon.h  TunerDemux.cpp  TunerDemux.h  TunerDvr.cpp  TunerDvr.h  TunerFilter.cpp  TunerFilter.h  TunerService.cpp  TunerService.h
utils/: AmlMpBitReader.cpp  AmlMpChunkFifo.cpp  AmlMpCodecCapability.cpp  AmlMpCodecCapability.h  AmlMpConfig.cpp  AmlMpConfig.h  AmlMpData.h  AmlMpEventHandler.cpp  AmlMpEventLooper.cpp  AmlMpEventLooper.h  AmlMpEventLooperRoster.cpp  AmlMpFifo.h  AmlMpHandle.h  AmlMpLog.h  AmlMpLooper.cpp  AmlMpLooper.h  AmlMpMessage.cpp  AmlMpPlayerRoster.cpp  AmlMpRefBase.cpp  AmlMpRefBase.h  AmlMpSignalHandler.cpp  AmlMpSignalHandler.h  AmlMpStrongPointer.cpp  AmlMpStrongPointer.h  AmlMpThread.cpp  AmlMpThread.h  AmlMpUtils.cpp  AmlMpUtils.h  Amlsysfsutils.cpp
utils/json/: allocator.h  config.h  forwards.h  json_features.h  reader.h  value.h  writer.h
utils/json/lib_json/: json_reader.cpp  json_tool.h  json_value.cpp  json_valueiterator.inl  json_writer.cpp
